# img-generator

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
src/WidgetGen/: main.py  security_api.py
src/WidgetGen/apis/: token_image_api.py  token_image_api_base.py
src/WidgetGen/models/: token_trend_data.py  token_vote_data.py
src/dyor/: gen.py
tests/: conftest.py  test_token_image_api.py
